style: swapped sent and received messages

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -74,7 +74,7 @@
         filter: invert();
     }
 
-    .notifications h4, .received p{
+    .notifications h4, .sent p{
         color: black;
     }
 
