--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,13 @@
     min-height: 100px;
     display: flex;
     align-items: flex-start;
+    flex-wrap: wrap;
     gap: 0.5rem;
     padding: 1rem 1rem;
+}
+
+.contact span{
+    font-size: 10px;
 }
 
 .contact:hover{
