--- a/css/responsive.css
+++ b/css/responsive.css
@@ -61,7 +61,7 @@
 }
 
 /* COLOR SCHEME */
-/* @media (prefers-color-scheme: dark){
+@media (prefers-color-scheme: dark){
     :root{
         --primary-color: var(--dark-color);
         --background-color-75: gray;
@@ -85,4 +85,4 @@
     .message-options:hover .hover-box{
         box-shadow: 10px 10px 5px rgba(255, 255, 255, 0.5);
      }
-} */
+}
