style: pop up box repositioned

--- a/css/style.css
+++ b/css/style.css
@@ -237,8 +237,8 @@
     flex-wrap: wrap;
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    top: .9rem;
+    right: .6rem;
     gap: 1rem;
  }
 
